[package]
name = "quarry-test"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "quarry_test"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[profile.release]
overflow-checks = true

[dependencies]
anchor-lang = "0.24.1"
quarry-merge-mine = { version = "5.1", features = ["cpi"] }
quarry-mine = { version = "5.1", features = ["cpi"] }
quarry-mint-wrapper = { version = "5.1", features = ["cpi"] }
quarry-operator = { version = "5.1", features = ["cpi"] }
quarry-redeemer = { version = "5.1", features = ["cpi"] }
quarry-registry = { version = "5.1", features = ["cpi"] }
